--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.4.0
   video_player: ^2.9.5
+  dio: ^5.8.0+1
+
 
 dev_dependencies:
   flutter_test:
