--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.4.0
   video_player: ^2.9.5
   dio: ^5.8.0+1
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.0+1
 
 
 dev_dependencies:
