--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,16 +19,27 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
+//    defaultConfig {
+//        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+//        applicationId = "com.example.sampledata"
+//        // You can update the following values to match your application needs.
+//        // For more information, see: https://flutter.dev/to/review-gradle-config.
+//        minSdk = flutter.minSdkVersion
+//        targetSdk = flutter.targetSdkVersion
+//        versionCode = flutter.versionCode
+//        versionName = flutter.versionName
+//        multiDexEnabled true
+//    }
+
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.sampledata"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        minSdk = 23 // ✅ Set manually
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        multiDexEnabled = true
     }
+
 
     buildTypes {
         release {
@@ -41,4 +52,7 @@ android {
 
 flutter {
     source = "../.."
+}
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:33.15.0')
 }
