--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,39 @@
+//buildscript {
+//    dependencies {
+//        classpath 'com.google.gms:google-services:4.3.15'  // ✅ Add this
+//    }
+//}
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//}
+//
+//rootProject.buildDir = "../build"
+//subprojects {
+//    project.buildDir = "${rootProject.buildDir}/${project.name}"
+//}
+//subprojects {
+//    project.evaluationDependsOn(":app")
+//}
+//
+//tasks.register("clean", Delete) {
+//    delete rootProject.buildDir
+//}
+
+
+buildscript {
+    repositories {
+        google()         // ✅ REQUIRED for Firebase
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.0.0' // Or your version
+        classpath 'com.google.gms:google-services:4.3.15' // ✅ Firebase
+    }
+}
+
 allprojects {
     repositories {
         google()
