--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   dio: ^5.8.0+1
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
+  google_sign_in: ^6.2.2
 
 
 dev_dependencies:
